--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "name": "Serhiy Krasovskyy",
     "email": "xhunter74@gmail.com"
   },
-  "homepage": "https://github.com/Author/ioBroker.template",
+  "homepage": "https://github.com/XHunter74/ioBroker.apcups",
   "license": "MIT",
   "keywords": [
     "ioBroker",
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Author/ioBroker.template"
+    "url": "https://github.com/XHunter74/ioBroker.apcups"
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.5.0",
@@ -56,7 +56,7 @@
     "release": "release-script"
   },
   "bugs": {
-    "url": "https://github.com/Author/ioBroker.template/issues"
+    "url": "https://github.com/XHunter74/ioBroker.apcups/issues"
   },
   "readmeFilename": "README.md"
 }
