Fixed warnings. Switched version => 0.0.2

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
             "always"
         ]
     },
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 2018
     }
