--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.apcups",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Adapter to communicate with APC UPS via apcupsd",
   "author": {
     "name": "Serhiy Krasovskyy",
@@ -35,9 +35,10 @@
     "@types/sinon": "^10.0.2",
     "@types/sinon-chai": "^3.2.5",
     "axios": "^0.21.1",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^7.30.0",
+    "eslint": "^7.32.0",
     "gulp": "^4.0.2",
     "mocha": "^9.0.2",
     "proxyquire": "^2.1.3",
@@ -55,6 +56,9 @@
     "check": "tsc --noEmit -p tsconfig.check.json",
     "lint": "eslint",
     "release": "release-script"
+  },
+  "standard": {
+    "parser": "@babel/eslint-parser"
   },
   "bugs": {
     "url": "https://github.com/XHunter74/ioBroker.apcups/issues"
