--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "url": "https://github.com/XHunter74/ioBroker.apcups"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.5.0",
-    "apcaccess": "^1.1.2"
+    "@iobroker/adapter-core": "^2.5.0"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^2.2.0",
