--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   # Performs quick checks before the expensive test runs
   check-and-lint:
-    if: contains(github.event.head_commit.message, '[skip ci]') == false
+    #if: contains(github.event.head_commit.message, '[skip ci]') == false
 
     runs-on: ubuntu-latest
 
@@ -43,7 +43,7 @@ jobs:
 
   # Runs adapter tests on all supported node versions and OSes
   adapter-tests:
-    if: contains(github.event.head_commit.message, '[skip ci]') == false
+    #if: contains(github.event.head_commit.message, '[skip ci]') == false
 
     needs: [check-and-lint]
 
@@ -51,7 +51,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
 
     steps:
       - name: Checkout code
@@ -78,13 +78,13 @@ jobs:
 
   # Deploys the final package to NPM
   deploy:
-    needs: [adapter-tests]
+    #needs: [adapter-tests]
 
     # Trigger this step only when a commit on any branch is tagged with a version number
-    if: |
-      contains(github.event.head_commit.message, '[skip ci]') == false &&
-      github.event_name == 'push' &&
-      startsWith(github.ref, 'refs/tags/v')
+    # if: |
+    #   contains(github.event.head_commit.message, '[skip ci]') == false &&
+    #   github.event_name == 'push' &&
+    #   startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -118,31 +118,4 @@ jobs:
         run: |
           npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
           npm whoami
-          npm publish
-#      - name: Create Github Release
-#        uses: actions/create-release@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.Github_Token}}
-#        with:
-#          tag_name: ${{ github.ref }}
-#          release_name: Release v${{ steps.extract_release.outputs.VERSION }}
-#          draft: false
-#          # Prerelease versions create prereleases on Github
-#          prerelease: ${{ contains(steps.extract_release.outputs.VERSION, '-') }}
-#          body: ${{ steps.extract_release.outputs.BODY }}
-#
-#      - name: Notify Sentry.io about the release
-#        run: |
-#          npm i -g @sentry/cli
-#          export SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
-#          export SENTRY_URL=https://sentry.iobroker.net
-#          export SENTRY_ORG=iobroker
-#          export SENTRY_PROJECT=iobroker-zigbee
-#          export SENTRY_VERSION=iobroker.zigbee@${{ steps.extract_release.outputs.VERSION }}
-#          sentry-cli releases new $SENTRY_VERSION
-#          sentry-cli releases finalize $SENTRY_VERSION
-#        # Add the following line BEFORE finalize if repositories are connected in Sentry
-#        # sentry-cli releases set-commits $SENTRY_VERSION --auto
-#
-#        # Add the following line BEFORE finalize if sourcemap uploads are needed
-#        # sentry-cli releases files $SENTRY_VERSION upload-sourcemaps build/
+        #npm publish
