--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   # Performs quick checks before the expensive test runs
   check-and-lint:
-    #if: contains(github.event.head_commit.message, '[skip ci]') == false
+    if: contains(github.event.head_commit.message, '[skip ci]') == false
 
     runs-on: ubuntu-latest
 
@@ -44,7 +44,7 @@ jobs:
 
   # Runs adapter tests on all supported node versions and OSes
   adapter-tests:
-    #if: contains(github.event.head_commit.message, '[skip ci]') == false
+    if: contains(github.event.head_commit.message, '[skip ci]') == false
 
     needs: [check-and-lint]
 
@@ -79,13 +79,13 @@ jobs:
 
   # Deploys the final package to NPM
   deploy:
-    #needs: [adapter-tests]
+    needs: [adapter-tests]
 
     # Trigger this step only when a commit on any branch is tagged with a version number
-    # if: |
-    #   contains(github.event.head_commit.message, '[skip ci]') == false &&
-    #   github.event_name == 'push' &&
-    #   startsWith(github.ref, 'refs/tags/v')
+    if: |
+      contains(github.event.head_commit.message, '[skip ci]') == false &&
+      github.event_name == 'push' &&
+      startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     strategy:
       matrix:
