--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "url": "https://github.com/XHunter74/ioBroker.apcups"
     },
     "dependencies": {
-        "@iobroker/adapter-core": "^2.5.0"
+        "@iobroker/adapter-core": "^2.5.0",
+        "@sentry/node": "^6.17.9",
+        "@sentry/tracing": "^6.17.9"
     },
     "devDependencies": {
         "@alcalzone/release-script": "^2.2.0",
