[skip ci] Modify actions.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,3 +120,13 @@ jobs:
           npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
           npm whoami
           npm publish
+     - name: Notify Sentry.io about the release
+       run: |
+         npm i -g @sentry/cli
+         export SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
+         export SENTRY_URL=https://sentry.io
+         export SENTRY_ORG=private-person-ua
+         export SENTRY_PROJECT=iobroker-apcups
+         export SENTRY_VERSION=iobroker.apcups@${{ steps.extract_release.outputs.VERSION }}
+         sentry-cli releases new $SENTRY_VERSION
+         sentry-cli releases finalize $SENTRY_VERSION
