--- a/package.json
+++ b/package.json
@@ -41,12 +41,20 @@
         "gulp": "^4.0.2",
         "mocha": "^9.0.2",
         "proxyquire": "^2.1.3",
+        "react-dom": "^17.0.2",
+        "react": "^17.0.2",
         "sinon": "^11.1.1",
         "sinon-chai": "^3.7.0",
         "typescript": "^4.3.5"
     },
     "main": "main.js",
     "scripts": {
+        "prebuild": "rimraf admin/build",
+        "build": "build-adapter react",
+        "watch": "build-adapter react --watch",
+        "prebuild:react": "rimraf admin/build",
+        "build:react": "build-adapter react",
+        "watch:react": "build-adapter react --watch",
         "test:js": "mocha --config test/mocharc.custom.json \"{!(node_modules|test)/**/*.test.js,*.test.js,test/**/test!(PackageFiles|Startup).js}\"",
         "test:package": "mocha test/package --exit",
         "test:unit": "mocha test/unit --exit",
