--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "proxyquire": "^2.1.3",
         "react-dom": "^17.0.2",
         "react": "^17.0.2",
+        "react-scripts": "5.0.1",
         "sinon": "^11.1.1",
         "sinon-chai": "^3.7.0",
         "typescript": "^4.3.5"
@@ -50,7 +51,7 @@
     "main": "main.js",
     "scripts": {
         "prebuild": "rimraf admin/build",
-        "build": "build-adapter react",
+        "build": "react-scripts build",
         "watch": "build-adapter react --watch",
         "prebuild:react": "rimraf admin/build",
         "build:react": "build-adapter react",
