--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "iobroker.apcups",
-    "version": "1.0.15",
+    "version": "1.0.16",
     "description": "Adapter to communicate with APC UPS via apcupsd",
     "author": {
         "name": "Serhiy Krasovskyy",
@@ -15,12 +15,24 @@
         "UPS",
         "apcupsd"
     ],
+    "contributors": [
+        {
+            "name": "Serhiy Krasovskyy",
+            "email": "xhunter74@gmail.com"
+        }
+    ],
+    "engines": {
+        "node": ">=14"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/xhunter74/ioBroker.apcups.git"
     },
+    "bugs": {
+        "url": "https://github.com/XHunter74/ioBroker.apcups/issues"
+    },
     "dependencies": {
-        "@iobroker/adapter-core": "^2.5.0"
+        "@iobroker/adapter-core": "^3.0.4"
     },
     "devDependencies": {
         "@alcalzone/release-script": "^2.2.0",
@@ -58,9 +70,6 @@
     },
     "standard": {
         "parser": "@babel/eslint-parser"
-    },
-    "bugs": {
-        "url": "https://github.com/xhunter74/ioBroker.apcups/issues"
     },
     "readmeFilename": "README.md"
 }
