--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "name": "Serhiy Krasovskyy",
         "email": "xhunter74@gmail.com"
     },
-    "homepage": "https://github.com/xhunter74/ioBroker.apcups.git",
+    "homepage": "https://github.com/XHunter74/ioBroker.apcups",
     "license": "MIT",
     "keywords": [
         "ioBroker",
@@ -26,7 +26,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/xhunter74/ioBroker.apcups.git"
+        "url": "https://github.com/XHunter74/ioBroker.apcups.git"
     },
     "bugs": {
         "url": "https://github.com/XHunter74/ioBroker.apcups/issues"
