--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         }
     ],
     "engines": {
-        "node": ">=16.4.0"
+        "node": ">=18"
     },
     "repository": {
         "type": "git",
@@ -32,26 +32,31 @@
         "url": "https://github.com/XHunter74/ioBroker.apcups/issues"
     },
     "dependencies": {
-        "@iobroker/adapter-core": "^3.0.4"
+        "@iobroker/adapter-core": "^3.0.6"
     },
     "devDependencies": {
         "@alcalzone/release-script": "^3.7.0",
-        "@iobroker/testing": "^4.1.0",
-        "@types/chai": "^4.2.20",
-        "@types/chai-as-promised": "^7.1.4",
+        "@alcalzone/release-script-plugin-iobroker": "^3.7.0",
+        "@alcalzone/release-script-plugin-license": "^3.7.0",
+        "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
+        "@iobroker/adapter-dev": "^1.3.0",
+        "@iobroker/testing": "^4.1.1",
+        "@tsconfig/node18": "^18.2.4",
+        "@types/chai": "^4.3.14",
+        "@types/chai-as-promised": "^7.1.8",
         "@types/mocha": "^8.2.3",
-        "@types/node": "^14.17.4",
-        "@types/proxyquire": "^1.3.28",
-        "@types/sinon": "^10.0.2",
-        "@types/sinon-chai": "^3.2.5",
+        "@types/node": "^18.19.30",
+        "@types/proxyquire": "^1.3.31",
+        "@types/sinon": "^17.0.3",
+        "@types/sinon-chai": "^3.2.12",
         "axios": "^0.21.1",
         "babel-eslint": "^10.1.0",
-        "chai": "^4.3.4",
+        "chai": "^4.4.1",
         "chai-as-promised": "^7.1.1",
-        "eslint": "^7.32.0",
-        "mocha": "^9.0.2",
+        "eslint": "^8.57.0",
+        "mocha": "^10.4.0",
         "proxyquire": "^2.1.3",
-        "sinon": "^11.1.1",
+        "sinon": "^17.0.1",
         "sinon-chai": "^3.7.0",
         "typescript": "^4.3.5"
     },
