--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@alcalzone/release-script-plugin-iobroker": "^3.7.0",
         "@alcalzone/release-script-plugin-license": "^3.7.0",
         "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
+        "@eslint/js": "^9.1.1",
         "@iobroker/adapter-dev": "^1.3.0",
         "@iobroker/testing": "^4.1.1",
         "@tsconfig/node18": "^18.2.4",
@@ -49,11 +50,11 @@
         "@types/proxyquire": "^1.3.31",
         "@types/sinon": "^17.0.3",
         "@types/sinon-chai": "^3.2.12",
-        "axios": "^0.21.1",
         "babel-eslint": "^10.1.0",
         "chai": "^4.4.1",
         "chai-as-promised": "^7.1.1",
-        "eslint": "^8.57.0",
+        "eslint": "^9.1.1",
+        "globals": "^15.0.0",
         "mocha": "^10.4.0",
         "proxyquire": "^2.1.3",
         "sinon": "^17.0.1",
