--- a/.npmignore
+++ b/.npmignore
@@ -2,13 +2,10 @@
 node_modules/
 nbproject/
 *.code-workspace
-Thumbs.db
-gulpfile.js
 
 # CI test files
 test/
-travis/
-appveyor.yaml
+main.test.js
 
 # Type checking configuration
 tsconfig.json
@@ -17,9 +14,3 @@ tsconfig.*.json
 # npm package files
 iobroker.*.tgz
 package-lock.json
-
-# i18n intermediate files
-admin/i18n
-
-# maintenance scripts
-maintenance/**
