--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
         "@alcalzone/release-script-plugin-iobroker": "^3.7.0",
         "@alcalzone/release-script-plugin-license": "^3.7.0",
         "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
+        "@babel/core": "^7.24.4",
+        "@babel/eslint-parser": "^7.24.1",
         "@iobroker/adapter-dev": "^1.3.0",
         "@iobroker/testing": "^4.1.1",
         "@tsconfig/node18": "^18.2.4",
