--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
         "@babel/core": "^7.24.4",
         "@babel/eslint-parser": "^7.24.1",
+        "@babel/preset-env": "^7.24.4",
         "@iobroker/adapter-dev": "^1.3.0",
         "@iobroker/testing": "^4.1.1",
         "@tsconfig/node18": "^18.2.4",
