--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/XHunter74/ioBroker.apcups.git"
+        "url": "https://github.com/XHunter74/ioBroker.apcups"
     },
     "bugs": {
         "url": "https://github.com/XHunter74/ioBroker.apcups/issues"
