--- a/package.json
+++ b/package.json
@@ -62,6 +62,15 @@
         "typescript": "^5.4.5"
     },
     "main": "main.js",
+    "files": [
+        "admin{,/!(src)/**}/!(tsconfig|tsconfig.*|.eslintrc).{json,json5}",
+        "admin{,/!(src)/**}/*.{html,css,png,svg,jpg,js,eot,ttf,woff,woff2}",
+        "lib/",
+        "www/",
+        "io-package.json",
+        "LICENSE",
+        "main.js"
+      ],
     "scripts": {
         "test:js": "mocha --config test/mocharc.custom.json \"{!(node_modules|test)/**/*.test.js,*.test.js,test/**/test!(PackageFiles|Startup).js}\"",
         "test:package": "mocha test/package --exit",
