--- a/package.json
+++ b/package.json
@@ -39,11 +39,8 @@
         "@alcalzone/release-script-plugin-iobroker": "^3.7.0",
         "@alcalzone/release-script-plugin-license": "^3.7.0",
         "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
-        "@babel/core": "^7.24.4",
-        "@babel/eslint-parser": "^7.24.1",
-        "@babel/preset-env": "^7.24.4",
         "@iobroker/adapter-dev": "^1.3.0",
-        "@iobroker/testing": "^4.1.1",
+        "@iobroker/testing": "^4.1.3",
         "@tsconfig/node18": "^18.2.4",
         "@types/chai": "^4.3.14",
         "@types/chai-as-promised": "^7.1.8",
@@ -55,11 +52,14 @@
         "chai": "^4.4.1",
         "chai-as-promised": "^7.1.1",
         "eslint": "^9.1.1",
-        "globals": "^15.1.0",
         "mocha": "^10.4.0",
         "sinon": "^17.0.1",
         "sinon-chai": "^3.7.0",
-        "typescript": "^5.4.5"
+        "typescript": "^5.4.5",
+        "@babel/core": "^7.24.4",
+        "@babel/eslint-parser": "^7.24.1",
+        "@babel/preset-env": "^7.24.4",
+        "globals": "^15.1.0"
     },
     "main": "main.js",
     "files": [
@@ -70,7 +70,7 @@
         "io-package.json",
         "LICENSE",
         "main.js"
-      ],
+    ],
     "scripts": {
         "test:js": "mocha --config test/mocharc.custom.json \"{!(node_modules|test)/**/*.test.js,*.test.js,test/**/test!(PackageFiles|Startup).js}\"",
         "test:package": "mocha test/package --exit",
