Modified test-and-release workflow.

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -107,12 +107,12 @@ jobs:
           VERSION="${{ github.ref }}"
           VERSION=${VERSION##*/v}
           # VERSION=0.0.6
-          echo "::set-output name=VERSION::$VERSION"
+          echo "{name}={VERSION::$VERSION}" >> $GITHUB_OUTPUT
           BODY=$(git show -s --format=%b)
           BODY="${BODY//'%'/'%25'}"
           BODY="${BODY//$'\n'/'%0A'}"
           BODY="${BODY//$'\r'/'%0D'}"
-          echo "::set-output name=BODY::$BODY"
+          echo "{name}={BODY::$BODY}" >> $GITHUB_OUTPUT
 
       - name: Publish package to npm
         run: |
