Try to fix publish.

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -121,7 +121,7 @@ jobs:
       - name: Publish package to npm
         run: |
           # npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
-          npm whoami
+          # npm whoami
           npm publish
 
       - name: Notify Sentry.io about the release
