--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -122,6 +122,8 @@ jobs:
         run: |
           # npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
           # npm whoami
+          npm install -g npm@latest
+          run: npm ci
           npm publish
 
       - name: Notify Sentry.io about the release
